# django-sage-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
locales/en/LC_MESSAGES/: django.po
locales/fa/LC_MESSAGES/: django.po
sage_tools/: apps.py
sage_tools/context_processors/: maintenance.py
sage_tools/decorators/: __init__.py  admin.py
sage_tools/encryptors/: __init__.py  base.py  dummy.py  fernet_encrypt.py
sage_tools/fields/: svg.py
sage_tools/forms/: timezone.py
sage_tools/handlers/: file.py  session.py
sage_tools/helpers/: typings.py
sage_tools/locale/ar/LC_MESSAGES/: django.po
sage_tools/locale/fa/LC_MESSAGES/: django.mo  django.po
sage_tools/middlewares/: cookie.py  csrf.py  time_zone.py
sage_tools/mixins/admins/: __init__.py  limits.py
sage_tools/mixins/forms/: __init__.py  user.py
sage_tools/mixins/models/: __init__.py  abstract.py  access.py  address.py  base.py  comment.py  comment.py.py  rating.py
sage_tools/mixins/views/: __init__.py  access.py  cache.py  http.py  locale.py
sage_tools/repository/generator/: __init__.py  base.py
sage_tools/services/: slug.py
sage_tools/tests/: conftest.py
sage_tools/tests/context_processors/: test_maintenance.py
sage_tools/tests/decorators/: test_decorators.py
sage_tools/tests/encryptors/: test_encryptors.py
sage_tools/tests/repostiroy/: test_base_generator.py
sage_tools/tests/services/: test_slug.py
sage_tools/tests/testapp/settings/: asgi.py  settings.py  urls.py  wsgi.py
sage_tools/tests/validators/: test_numeral.py  test_string.py
sage_tools/utils/: admin_prioritize.py  converters.py  dataclasses.py  funcs.py  linker.py  locale.py  tom_reader.py
sage_tools/validators/: file.py  numeral.py  string.py
sage_tools/widgets/: __init__.py  svg.py
